# evictl

./: README.md  SECURITY.md  package.json  pyproject.toml  tsconfig.json
docs/: research-notes.md
skills/evictl/: SKILL.md
skills/evictl/agents/: openai.yaml
src/: cli.ts
src/evictl/: cli.py
tests/: cli.test.ts  test_cli.py
